[] -- Añadidos los campos de Baños y Habitaciones, ademas de no subir toda la interfaz con el teclado

--- a/app/src/main/res/layout/images_item.xml
+++ b/app/src/main/res/layout/images_item.xml
@@ -27,10 +27,9 @@
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             android:contentDescription="@string/delete"
-            android:src="@drawable/ic_delete"
+            android:src="@drawable/ic_cancel_black_24dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/md_theme_dark_background" />
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
