--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="seed">#001646</color>
     <color name="md_theme_light_primary">#3D5BA9</color>
+    <color name="md_theme_light_background_transparent">#B3FFFFFF</color>
     <color name="md_theme_light_onPrimary">#FFFFFF</color>
     <color name="md_theme_light_primaryContainer">#DBE1FF</color>
     <color name="md_theme_light_onPrimaryContainer">#00184A</color>
