--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,27 +3,27 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_home"
         android:title="@string/title_home" />
 
     <item
         android:id="@+id/navigation_search"
-        android:icon="@drawable/ic_search_black_24dp"
+        android:icon="@drawable/ic_search"
         android:title="@string/title_search" />
 
     <item
         android:id="@+id/navigation_add"
-        android:icon="@drawable/ic_add_box_black_24dp"
+        android:icon="@drawable/ic_add_box"
         android:title="@string/title_add" />
 
     <item
         android:id="@+id/navigation_messages"
-        android:icon="@drawable/ic_message_black_24dp"
+        android:icon="@drawable/ic_message"
         android:title="@string/title_messages" />
 
     <item
         android:id="@+id/navigation_profile"
-        android:icon="@drawable/ic_person_black_24dp"
+        android:icon="@drawable/ic_person"
         android:title="@string/title_profile" />
 
 </menu>
