--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 
 <resources>
     <color name="seed">#001646</color>
+    <color name="black_transparent">#80000000</color>
     <color name="md_theme_light_primary">#3D5BA9</color>
     <color name="md_theme_light_background_transparent">#B3FFFFFF</color>
     <color name="md_theme_light_onPrimary">#FFFFFF</color>
