--- a/app/src/main/res/layout/images_item.xml
+++ b/app/src/main/res/layout/images_item.xml
@@ -6,6 +6,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:background="@color/md_theme_light_background"
         android:layout_height="match_parent">
 
         <ImageView
