--- a/app/src/main/res/drawable/ic_bedroom.xml
+++ b/app/src/main/res/drawable/ic_bedroom.xml
@@ -1,11 +1,5 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:tint="#000000" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
       
-    <path android:fillColor="@android:color/white" android:pathData="M16.5,12h-9c-0.55,0 -1,0.45 -1,1v1h11v-1C17.5,12.45 17.05,12 16.5,12z"/>
-      
-    <path android:fillColor="@android:color/white" android:pathData="M7.25,8.5h4v2h-4z"/>
-      
-    <path android:fillColor="@android:color/white" android:pathData="M12.75,8.5h4v2h-4z"/>
-      
-    <path android:fillColor="@android:color/white" android:pathData="M20,2H4C2.9,2 2,2.9 2,4v16c0,1.1 0.9,2 2,2h16c1.1,0 2,-0.9 2,-2V4C22,2.9 21.1,2 20,2zM19,17h-1.5v-1.5h-11V17H5v-3.83c0,-0.66 0.25,-1.26 0.65,-1.72V9c0,-1.1 0.9,-2 2,-2H11c0.37,0 0.72,0.12 1,0.32C12.28,7.12 12.63,7 13,7h3.35c1.1,0 2,0.9 2,2v2.45c0.4,0.46 0.65,1.06 0.65,1.72V17z"/>
+    <path android:fillColor="@android:color/white" android:pathData="M21,10.78V8c0,-1.65 -1.35,-3 -3,-3h-4c-0.77,0 -1.47,0.3 -2,0.78C11.47,5.3 10.77,5 10,5H6C4.35,5 3,6.35 3,8v2.78C2.39,11.33 2,12.12 2,13v6h2v-2h16v2h2v-6C22,12.12 21.61,11.33 21,10.78zM14,7h4c0.55,0 1,0.45 1,1v2h-6V8C13,7.45 13.45,7 14,7zM5,8c0,-0.55 0.45,-1 1,-1h4c0.55,0 1,0.45 1,1v2H5V8zM4,15v-2c0,-0.55 0.45,-1 1,-1h14c0.55,0 1,0.45 1,1v2H4z"/>
     
 </vector>
