--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -27,5 +27,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvTitte"
-        tools:listitem="@layout/parcela_item" />
+        tools:listitem="@layout/property_item" />
 </androidx.constraintlayout.widget.ConstraintLayout>
