--- a/app/src/main/res/layout/property_item.xml
+++ b/app/src/main/res/layout/property_item.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="186dp"
-    android:layout_margin="@dimen/common_margin">
+    android:layout_margin="@dimen/common_margin"
+    android:background="@drawable/rounded_corners">
 
     <ImageView
-        android:id="@+id/parcela_image"
+        android:id="@+id/property_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/ic_launcher_background"
-        android:contentDescription="@string/parcela_image" />
+        android:contentDescription="@string/parcela_image"
+        android:scaleType="fitXY" />
 
     <View
         android:id="@+id/vOverlay"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/black_transparent"
+        android:background="@drawable/rounded_corners"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,19 +33,33 @@
         android:background="@android:color/transparent"
         android:contentDescription="@string/favorite"
         android:src="@drawable/ic_favorite"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tvParcela"
+        android:id="@+id/tvProperty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/common_margin"
+        android:layout_marginStart="@dimen/common_margin"
         android:text="@string/parcela_name"
         android:textColor="@android:color/white"
         android:textSize="@dimen/text_tittle"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/rvExtras"
         app:layout_constraintStart_toStartOf="parent" />
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvExtras"
+        android:layout_width="wrap_content"
+        android:layout_margin="@dimen/common_margin"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:scrollbars="none"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/item_extra" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
