--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/md_theme_light_background"
-    tools:context=".RegisterActivity">
+    tools:context=".ui.portal.register.RegisterActivity">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilEmail"
