--- a/app/src/main/res/layout/item_extra.xml
+++ b/app/src/main/res/layout/item_extra.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
+    android:layout_margin="6dp"
     android:layout_height="wrap_content">
 
     <ImageView
@@ -9,6 +10,7 @@
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:contentDescription="@string/extra_image"
+        android:src="@drawable/ic_bedroom"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,9 +21,9 @@
         android:id="@+id/tvExtra"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/common_padding"
-        android:textColor="@android:color/white"
+        android:layout_marginStart="3dp"
         android:textStyle="bold"
+        android:text="2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/ivExtra"
