--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,13 @@
         android:id="@+id/navigation_home"
         android:name="com.isanz.inmomarket.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_navigation_home_to_propertyFragment"
+            app:destination="@id/propertyFragment"
+            app:enterAnim="@android:anim/fade_in"
+            app:exitAnim="@android:anim/fade_out" />
+    </fragment>
     <fragment
         android:id="@+id/navigation_profile"
         android:name="com.isanz.inmomarket.ui.profile.ProfileFragment"
@@ -29,6 +35,29 @@
         android:name="com.isanz.inmomarket.ui.add.AddFragment"
         android:label="fragment_add"
         tools:layout="@layout/fragment_add" />
+    <fragment
+        android:id="@+id/propertyFragment"
+        android:name="com.isanz.inmomarket.ui.property.PropertyFragment"
+        android:label="fragment_property"
+        tools:layout="@layout/fragment_property" >
+        <argument
+            android:name="propertyId"
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="null" />
+        <action
+            android:id="@+id/action_propertyFragment_to_chatFragment"
+            app:destination="@id/chatFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/chatFragment"
+        android:name="com.isanz.inmomarket.ChatFragment"
+        android:label="fragment_chat"
+        tools:layout="@layout/fragment_chat" >
+        <argument
+            android:name="idUser"
+            app:argType="string" />
+    </fragment>
 
 
 </navigation>
