[] -- Chat is in work, need to define structure

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -51,7 +51,7 @@
     </fragment>
     <fragment
         android:id="@+id/chatFragment"
-        android:name="com.isanz.inmomarket.ChatFragment"
+        android:name="com.isanz.inmomarket.ui.chat.ChatFragment"
         android:label="fragment_chat"
         tools:layout="@layout/fragment_chat" >
         <argument
