--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChatFragment">
+    android:focusable="true"
+    android:clickable="true"
+    tools:context=".ui.chat.ChatFragment">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
