--- a/app/src/main/res/layout/chat_item_o.xml
+++ b/app/src/main/res/layout/chat_item_o.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_gravity="start"
     android:layout_margin="@dimen/common_padding"
     app:cardCornerRadius="16dp">
 
@@ -16,15 +17,17 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="@dimen/common_padding"
-            android:text="@string/lorem_ipsum" />
+            android:text="@string/lorem_ipsum"
+            app:layout_constraintBottom_toTopOf="@id/tvMessageTime" />
 
         <TextView
             android:id="@+id/tvMessageTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="4dp"
             android:text="@string/time"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
