--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:focusable="true"
     android:clickable="true"
+    android:focusable="true"
     tools:context=".ui.chat.ChatFragment">
 
 
@@ -20,10 +20,10 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_margin="@dimen/common_margin"
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_margin="@dimen/common_margin"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -57,7 +57,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="@string/send_message"
-            android:inputType="textEmailAddress" />
+            android:inputType="textAutoCorrect" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
