--- a/app/src/main/res/layout/fragment_property.xml
+++ b/app/src/main/res/layout/fragment_property.xml
@@ -59,9 +59,10 @@
 
         <TextView
             android:id="@+id/tvDescription"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:textAlignment="center"
+            android:layout_margin="@dimen/common_margin"
             android:text="@string/pront_description"
             android:textColor="@android:color/black"
             android:textSize="18sp"
