--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
     android:fillViewport="true"
+    android:focusable="true"
     tools:context=".ui.add.AddFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/md_theme_light_background">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/tvTittle"
@@ -101,91 +102,81 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/rvImages" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/clAdd"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tilRooms"
+            android:layout_width="156dp"
+            android:layout_height="0dp"
+            app:endIconMode="none"
             android:layout_margin="@dimen/common_margin"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/tilBaths"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btnLoadImages">
 
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/tieRooms"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/prompt_rooms"
+                android:inputType="number" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tilRooms"
-                android:layout_width="156dp"
-                android:layout_height="0dp"
-                app:endIconMode="none"
-                app:layout_constraintEnd_toStartOf="@id/tilBaths"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tieRooms"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint="@string/prompt_rooms"
-                    android:inputType="number" />
-
-            </com.google.android.material.textfield.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tilBaths"
-                android:layout_width="156dp"
-                android:layout_height="0dp"
-                app:endIconMode="none"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/tilRooms"
-                app:layout_constraintTop_toTopOf="parent">
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tilBaths"
+            android:layout_width="156dp"
+            android:layout_height="0dp"
+            app:endIconMode="none"
+            android:layout_margin="@dimen/common_margin"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/tilRooms"
+            app:layout_constraintTop_toBottomOf="@id/btnLoadImages">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tieBats"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint="@string/prompt_Baths"
-                    android:inputType="number" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/tieBats"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/prompt_Baths"
+                android:inputType="number" />
 
-            </com.google.android.material.textfield.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tilSquareMeters"
-                android:layout_width="156dp"
-                android:layout_height="0dp"
-                app:endIconMode="none"
-                app:layout_constraintEnd_toEndOf="@id/tilRooms"
-                app:layout_constraintStart_toStartOf="@id/tilRooms"
-                app:layout_constraintTop_toBottomOf="@id/tilRooms">
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tilSquareMeters"
+            android:layout_width="156dp"
+            android:layout_height="0dp"
+            app:endIconMode="none"
+            app:layout_constraintEnd_toEndOf="@id/tilRooms"
+            app:layout_constraintStart_toStartOf="@id/tilRooms"
+            app:layout_constraintTop_toBottomOf="@id/tilRooms">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tieSquareMeters"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint="@string/prompt_square_meters"
-                    android:inputType="number" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/tieSquareMeters"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/prompt_square_meters"
+                android:inputType="number" />
 
-            </com.google.android.material.textfield.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tilFloors"
-                android:layout_width="156dp"
-                android:layout_height="0dp"
-                app:endIconMode="none"
-                app:layout_constraintEnd_toEndOf="@id/tilBaths"
-                app:layout_constraintStart_toStartOf="@id/tilBaths"
-                app:layout_constraintTop_toBottomOf="@id/tilBaths">
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tilFloors"
+            android:layout_width="156dp"
+            android:layout_height="0dp"
+            app:endIconMode="none"
+            app:layout_constraintEnd_toEndOf="@id/tilBaths"
+            app:layout_constraintStart_toStartOf="@id/tilBaths"
+            app:layout_constraintTop_toBottomOf="@id/tilBaths">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tieFloors"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint="@string/prompt_floors"
-                    android:inputType="number" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/tieFloors"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/prompt_floors"
+                android:inputType="number" />
 
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
 
         <com.google.android.material.textfield.TextInputLayout
@@ -196,7 +187,7 @@
             app:endIconMode="none"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/clAdd">
+            app:layout_constraintTop_toBottomOf="@id/tilSquareMeters">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/tiePrice"
