--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -61,6 +61,9 @@
         <argument
             android:name="idChat"
             app:argType="string" />
+        <action
+            android:id="@+id/action_navigation_chat_to_navigation_messages"
+            app:destination="@id/navigation_messages" />
     </fragment>
 
 
