[] -- Añadida la funcion del mapa, y mostrar la localizacion de las casa con el icono de la App

--- a/app/src/main/res/layout/fragment_property.xml
+++ b/app/src/main/res/layout/fragment_property.xml
@@ -81,10 +81,11 @@
 
         <TextView
             android:id="@+id/tvAddress"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_margin="@dimen/common_margin"
             android:text="@string/prompt_address"
+            android:textAlignment="center"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
