[] -- Añadidos items al menu

--- a/app/src/main/res/menu/profile_drawer_menu.xml
+++ b/app/src/main/res/menu/profile_drawer_menu.xml
@@ -18,5 +18,9 @@
         android:icon="@drawable/ic_info"
         android:title="@string/about" />
 
+    <item
+        android:id="@+id/nav_share"
+        android:icon="@drawable/ic_share"
+        android:title="@string/share" />
 
 </menu>
